no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -1069,9 +1069,9 @@ STR.length                                      #
 
 STR.match(REGEXP)                               #Like REGEXP.exec(STR), except that if g flag, returns all matches as ARR
                                                 #(or null)
-STR.matchAll(REGEXP)                         *-|#Returns ITERABLE that returns successive REGEXP.exec(STR)
-                                             *-|#I.e. as opposed to STR.match(), when using a g flag, parenthesis groups and
-                                             *-|#indices will be returned too
+STR.matchAll(REGEXP)                       12*-|#Returns ITERABLE that returns successive REGEXP.exec(STR)
+                                           12*-|#I.e. as opposed to STR.match(), when using a g flag, parenthesis groups and
+                                           12*-|#indices will be returned too
 STR.search(REGEXP)                              #Like STR.indexOf() but with a REGEXP
 STR.starts|endsWith|includes(STR2[, NUM])     -|#
 
