--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1670,7 +1670,7 @@ import/*                         ##Node module "eslint-plugin-import
                                  ##        - jspm, babel, meteor, react-native, typescript
                                  ##  - import/cache OBJ: lifetime NUM (in secs, def: 30)
 
-node/*                           ##Module "eslint-plugin-node" (9.2.0)
+node/*                           ##Module "eslint-plugin-node" (10.0.0)
                                  ##Uses the following CONF.settings, which are defaults to RULE_CONF:
                                  ##  - allowModules 'MDL'_ARR: ignores those modules
                                  ##  - tryExtensions '.EXT'_ARR (def: '.js', '.json', '.node'): modules file extensions
@@ -1718,6 +1718,7 @@ node/exports-style [STR] [OBJ]   ##Must use only module.exports or only exports
 import/no-anonymous-             ##Avoid export of anonymous VAL: NUM|STR|BOOL, [], {}, () => {}, class {}, function () {}
  default-export [OBJ]            ##OBJ: allowLiteral|Array|Object|ArrowFunction|CallExpression|AnonymousFunction|AnonymousClass BOOL
                                  ##(def: false)
+node/no-exports-assign           ##Avoid `exports = VAL` (instead of `module.exports = VAL`)
 
 import/extensions [STR] [OBJ]    ##Avoid or require specifying file extensions in imported|required files
                                  ##STR: 'never' (def), 'always' or 'ignorePackages' (like always except when requiring modules)
