no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -15,7 +15,7 @@
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #12.9.1 (current), 10.16.3 (active LTS), 8.16.1 (active LTS)
+VERSION ==>                                     #12.10.0 (current), 10.16.3 (active LTS), 8.16.1 (active LTS)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -1852,9 +1852,9 @@ access(PATH[, NUM], FUNC(ERROR))                #Checks if has permission, accor
                                                 #  - size UINT
                                                 #  - blksize UINT, blocks UINT (both undefined on Windows)
                                                 #  - a|m|ctime DATE
-                                                #  - a|m|ctimeMs NUM
                                                 #  - birthtime DATE: creation time (Windows only)
-                                                #  - birthtimeMs NUM: creation time (Windows only)
+                                                #  - a|m|ctime|birthtimeMs NUM
+                                             12*#  - a|m|ctime|birthtimeNs NUM (only if OPTS.bigint true)
                                              10*#OPTS:
                                              10*#  - bigint BOOL (def: false): make FSSTAT.* BIGINT instead of UINT
 
@@ -1873,7 +1873,19 @@ realpath[.native]                               #Like normalize(), but also foll
                                               9*#If "native" does not cache and do less normalization
 
 unlink(PATH, FUNC(ERROR))                       #
-rmdir(PATH, FUNC(ERROR))                        #
+rmdir(PATH, FUNC(ERROR)[, OPTS])                #OPTS:
+                                             12*#  - recursive BOOL (def: false):
+                                             12*#     - recursively on children
+                                             12*#     - no error if PATH does not exist
+                                             12*#  - emfileWait NUM (def: 1000)
+                                             12*#     - retry with linear backoff (starting at 1ms, ending at NUMms) on
+                                             12*#       EMFILE (too many open files)
+                                             12*#     - requires OPTS.recursive true
+                                             12*#  - maxBusyTries NUM (def: 3)
+                                             12*#     - retry NUM times with linear backoff (starting at 100ms) on
+                                             12*#       EBUSY, ENOTEMPTY or EPERM
+                                             12*#     - requires OPTS.recursive true
+
 FS-EXTRA.remove(FILE|DIR, FUNC(ERROR))         ##Like rm -rf
 WRENCH.rmdirSyncRecursive(FILE|DIR[, BOOL])    ##Same. If true, fails silently.
 
@@ -1954,6 +1966,7 @@ createReadStream(PATH[, OBJ])->ISTREAM          #Preferred over readFile().
                                                 #  - fd FD_INT (def: null)
                                                 #  - mode NUM (def: 0666) (see above for Windows behavior)
                                                 #  - autoClose BOOL (def: true): close the file descriptor on error|end event
+                                             12*#  - emitClose BOOL (def: false): emit a 'close' event when destroyed
                                                 #  - start|end UINT: only use from bytes UINT to UINT2
                                                 #ISTREAM has extra:
                                                 #  - same members as OBJ
