no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -1884,6 +1884,7 @@ rmdir(PATH, FUNC(ERROR)[, OPTS])                #OPTS:
                                              12*#  - maxBusyTries NUM (def: 3)
                                              12*#     - retry NUM times with linear backoff (starting at 100ms) on
                                              12*#       EBUSY, ENOTEMPTY or EPERM
+                                             12*#     - reason: some anti-virus software on Windows lock directories while running
                                              12*#     - requires OPTS.recursive true
 
 FS-EXTRA.remove(FILE|DIR, FUNC(ERROR))         ##Like rm -rf
