no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -387,6 +387,9 @@ PACKAGE.exports                                 #OBJ of { "PATH": "PATH2", ... }
                                                 #  - on ESM import (not CommonJS)
                                                 #  - with import ... from 'MODULE/...', not '.[.]/MODULE' nor 'file:///...'
                                                 #  - if PACKAGE.type 'module'
+                                             12*#Can also import 'data:MIME,...':
+                                             12*#  - for MIMEs text/javascript, application/json, application/wasm
+                                             12*#  - cannot do a nested import inside ...
                                                 #PACKAGE.main won't be used unless one of the conditions above not met
                                                 #  - i.e. can be used for CommonJS imports only
                                                 #PATH:
@@ -1102,6 +1105,12 @@ TCPSOCKET.connect(ARGS[, FUNC()])               #ARGS:
                                                 #     - host 'ADDR'
                                                 #     - localAddress|localPort
                                                 #     - path 'PATH' (only for UNIX sockets, only option then)
+                                             12*#     - onread OBJ:
+                                             12*#        - callback(NUM, BUFFER)[->BOOL]:
+                                             12*#           - called on new data
+                                             12*#           - NUM is BUFFER length
+                                             12*#           - can return false to pause
+                                             12*#        - buffer BUFFER|UINT8ARR[()]: to store each data chunk
                                                 #     (see DNS.lookup())
                                                 #     - family 4|6|null
                                                 #     - hints
