no commit message

--- a/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
+++ b/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
@@ -5,7 +5,7 @@
 
 
 
-VERSION ==>                       #7.5.5
+VERSION ==>                       #7.6.1
 
 GOAL ==>                          #JavaScript source code transformation
 
@@ -639,6 +639,10 @@ transform-typescript              #Transpile TypeScript:
                                   #  - no allowNamespaces
 
 JSX ==>                           #See JSX doc
+
+V8 ==>                            #
+syntax-v8intrisics                #Internal %FUNC() from V8 (such as %DebugPrint())
+                                  #Enabled in Node with --allow-natives-syntax
 
 
                                              /=+===============================+=\
