no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1935,6 +1935,7 @@ you-dont-need-lodash-underscore/ ##Avoid Underscore|Lodash when there is a ES6 e
                                  ##    every|filter|map|reduce[Right]|some|includes|slice|replace()
                                  ##  - _.size() -> ARR.length
                                  ##  - _.isNaN() -> Number.isNaN()
+                                 ##  - _.isInteger() -> Number.isInteger()
                                  ##  - _.keys|assign|values|entries() -> Object.keys|assign|values|entries()
                                  ##  - _.toLower|toUpper|trim|repeat() -> STR.toLowerCase|toUpperCase|trim|repeat()
                                  ##  - _.range() -> Array.from() or [...Array().keys()]
@@ -1948,7 +1949,7 @@ you-dont-need-lodash-underscore/ ##Avoid Underscore|Lodash when there is a ES6 e
                                  ##  - _.startsWith() -> STR.startsWith()
                                  ##  - _.isNil|isNull|isUndefined() -> ==|=== null|undefined
                                  ##  - _.split() -> STR.split()
-                                 ##  - _.takeRight|drop() -> ARR.slice()
+                                 ##  - _.takeRight|drop[Right]() -> ARR.slice()
                                  ##  - _.padStart|End() -> STR.padStart|End()
                                  ##  - _.upperFirst() -> STR[0].toUpperCase()
                                  ##  - _.random() -> Math.random()
@@ -1964,7 +1965,7 @@ you-dont-need-lodash-underscore/ ##Avoid Underscore|Lodash when there is a ES6 e
                                  ##  - _.isEmpty() -> Object.keys().length
                                  ##  - _.keyBy() -> ARR.reduce()
                                  ##  - _.inRange() -> < >
-                                 ##Node module "eslint-plugin-you-dont-need-lodash-underscore" (6.6.0)
+                                 ##Node module "eslint-plugin-you-dont-need-lodash-underscore" (6.7.0)
 
 
                                              /=+===============================+=\
