--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -9,7 +9,7 @@ ALTERNATIVES ==>                  #  - eslint (prefered): more rules, more confi
                                   #  - jscs: not maintained, merged with eslint
                                   #  - jshint
 
-VERSION ==>                       #6.3.0
+VERSION ==>                       #6.4.0
                                   #JavaScript linter, using Espree parser.
 
 TYPE                              #ESTree type
@@ -1313,6 +1313,7 @@ no-confusing-arrow [OBJ]          #Avoid ... => VAL, where VAL makes it confusin
                                   #OBJ: allowParens BOOL (def: true): ignores if VAL is wrapped with ()
 
 max-params [NUM]                  #Max number of positional parameters (def: 3)
+default-param-last                #Avoid arguments default values on non-last arguments
 
 no-dupe-args                      #Avoid duplicate argument names
 
@@ -1328,6 +1329,7 @@ accessor-pairs [OBJ]              #Must have both get and set if one present
                                   #OBJ:
                                   #  - setWithoutGet BOOL (def: true): if set, must have get
                                   #  - getWithoutSet BOOL (def: true): if get, must have set
+                                  #  - enforceForClassMembers BOOL (def: false): for CLASS too
 getter-return [OBJ]               #Getters must have return statement
                                   #OBJ: allowImplicit BOOL: if false (def), forbid "return" with no VAL
 fp/no-get-set                    ##Avoid getters/setters
@@ -1537,6 +1539,7 @@ no-misleading-character-class     #Avoid using S_CODEPOINT in . or [] without /R
                                   #Avoid using Emojis, regional symbols and combining characters in . or []
 no-invalid-regexp [OBJ]           #Avoid invalid REGEXP
                                   #OBJ: allowConstructorFlags STR_ARR (allowed flags, def is all)
+prefer-regex-literals             #Avoid new RegExp('...') (but new RegExp(VAR) is ok)
 
 require-unicode-regexp            #Must use /REGEXP/u
 prefer-named-capture-group        #Must use /(?<NAME>...)/ instead of /(...)/
@@ -1719,6 +1722,7 @@ import/no-anonymous-             ##Avoid export of anonymous VAL: NUM|STR|BOOL, 
  default-export [OBJ]            ##OBJ: allowLiteral|Array|Object|ArrowFunction|CallExpression|AnonymousFunction|AnonymousClass BOOL
                                  ##(def: false)
 node/no-exports-assign           ##Avoid `exports = VAL` (instead of `module.exports = VAL`)
+no-import-assign                 ##Avoid `import VAR ...` then `VAR = VAL`
 
 import/extensions [STR] [OBJ]    ##Avoid or require specifying file extensions in imported|required files
                                  ##STR: 'never' (def), 'always' or 'ignorePackages' (like always except when requiring modules)
@@ -2004,7 +2008,7 @@ unicorn/prefer-add-event-listener##Avoid on() and "on* = FUNC", use addEventList
  [OBJ]                           ##OBJ:
                                  ##  - excludedPackages 'PKGNAME'_ARR
 
-no-obj-calls                      #Avoid Math(), JSON() or Reflect() (those are not functions although capitalized)
+no-obj-calls                      #Avoid Math(), JSON(), Reflect(), Atomics() (those are not functions although capitalized)
 
 
                                              /=+===============================+=\
