no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -2207,6 +2207,7 @@ on("beforeExit", FUNC(INT))                     #FUNC() can be async. If async, 
                                                 #INT is the exit code
 on("exit", FUNC(INT))                           #FUNC() must be sync
 process.exitCode                                #INT set in 'exit' handler providing either process.exit() or uncaught exception.
+                                                #Can be set too
 
 on("uncaughtException", FUNC(ERROR, STR))       #Any exception thrown and not caught in try/catch
                                                 #Can be exception top-level or within a microtask/macrotask
