no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -484,6 +484,17 @@ no-warning-comments [OBJ]         #Avoid comments like TODO|FIXME
                                   #OBJ:
                                   #  - terms STR_ARR (def: 'todo', 'fixme', 'xxx'): matched whole word, case-insensitive
                                   #  - location 'start' (def) or 'anywhere'
+unicorn/expiring-todo-comments   ##Avoid comments like TODO|FIXME unless they are followed by [CONDITION,...] and met one of them
+ [OBJ]                           ##CONDITION can be:
+                                 ##  - YYYY-MM-DD
+                                 ##  - >SEMVER: against PACKAGE.version
+                                 ##  - +PKGNAME or -PKGNAME: whether exists in PACKAGE.[dev]dependencies
+                                 ##  - PKGNAME@>SEMVER: against PACKAGE.[dev]dependencies version
+                                 ##  - engine:NAME@>SEMVER: against PACKAGE.engines[NAME]
+                                 ##OPTS:
+                                 ##  - terms STR_ARR (def: ['todo', 'fixme', 'xxx'])
+                                 ##  - allowWarningComments BOOL: if false (def), disable "no-warning-comments" rule
+                                 ##  - ignoreDatesOnPullRequests BOOL (def: false): disable YYYY-MM-DD when it's a PR
 
 eslint-comments/*                ##Module "eslint-plugin-eslint-comments" (3.1.2)
 eslint-comments/                 ##Every /* eslint-disable */ must be followed by a /* eslint-enable */
@@ -1169,6 +1180,7 @@ yoda [STR] [OBJ]                  #Handling of Yoda expressions.
 
 no-ternary                        #Avoid ?:
 no-nested-ternary                 #Avoid nested ternary expressions
+unicorn/no-nested-ternary        ##Avoid nested ternary expressions, except when wrapped in parenthesis and only single-level-nested
 no-unneeded-ternary [OBJ]         #Avoid TEST ? true : false (prefer Boolean(TEST))
                                   #OBJ: defaultAssignment BOOL (def: true): if false, also avoid
                                   #VAR ? VAR : VAL (prefer VAR || VAL)
@@ -1346,6 +1358,11 @@ consistent-return                 #If there is one return VAL, there must be no 
                                   #  - treatUndefinedAsUnspecified BOOL: if false (def), there must be no
                                   #    return undefined either
 
+unicorn/
+ consistent-function-scoping     ##Functions must be defined top-level if not closures
+
+unicorn/prefer-reflect-apply     ##Prefer Reflect.apply(FUNC, CONTEXT, ...) over FUNC.apply(CONTEXT, ...) or Function.prototype.apply.call(FUNC, CONTEXT, ...)
+
 
                                              /=+===============================+=\
                                             /  :                               :  \
@@ -1511,7 +1528,7 @@ no-useless-concat                 #Avoid STR_LIT + STR2_LIT
 prefer-template                   #Avoid STR + STR2, prefer `...`
 no-template-curly-in-string       #Avoid ${} inside "" or ''
 
-unicorn/*                        ##Module "eslint-plugin-unicorn" (10.0.0)
+unicorn/*                        ##Module "eslint-plugin-unicorn" (11.0.0)
 unicorn/prefer-starts-ends-with  ##Must use STR.startsWith|endsWith() when possible
 
 unicorn/no-hex-escape            ##Avoid \x... (prefer \u....)
@@ -2058,3 +2075,4 @@ unicorn/prefer-node-append       ##Prefer NODE.append() over NODE.appendChild()
 unicorn/prefer-node-remove       ##Prefer NODE.remove() over NODE.removeChild()
 unicorn/prefer-text-content      ##Prefer NODE.textContent over ELEM.innerText
 unicorn/prefer-event-key         ##Prefer EVENT.key over EVENT.keyCode
+unicorn/prefer-dataset           ##Prefer ELEM.dataset over ELEM.setAttribute()
