no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -884,13 +884,15 @@ moveCursor(OSTREAM, NUM[, NUM2][,FUNC()])->BOOL #Move cursor relatively (\eNUM2C
 clearScreenDown(OSTREAM[, FUNC()])->BOOL        #Clear all following lines (\e0J). To clear screen, combine with cursorTo(OSTREAM, 0, 0)
 
 emitKeypressEvents(OSTREAM[, INTERFACE])        #Enable OSTREAM.on('keypress')
-                                                #If OSTREAM is connected to an INTERFACE, can specify it to disable completion on copy-pasted input
+                                                #If OSTREAM (e.g. process.stdin) is connected to an INTERFACE, can specify it to disable completion on copy-pasted input
 OSTREAM.on('keypress', FUNC(STR, OBJ))          #STR is what to print (e.g. 'a', undefined or '') (for a, LeftArrow and CTRL-C)
                                                 #OBJ:
                                                 #  - sequence STR (e.g. 'a', '\u001b[D' or '\u0003')
                                                 #  - name STR (e.g. 'a', 'left' or 'c')
                                                 #  - shift|ctrl|meta BOOL
                                                 #Can use ESC sequences
+                                                #As opposed to 'data', it is for each character, not for bulk:
+                                                #  - e.g. when copy-pasting, 'data' will be emitted once but 'keypress' once per character
 
 
                                              /=+===============================+=\
