no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -2423,7 +2423,7 @@ exec[File]Sync(...)                             #Like exec[File]() except for th
 
 CHILDPROCESS.pid                                #
 
-CHILDPROCESS.stdio[FD_INT]                      #I|OSTREAM for file descriptor FD_INT
+CHILDPROCESS.stdio[FD_INT]                      #I|OSTREAM for file descriptor FD_INT. null if not 'pipe'
 CHILDPROCESS.stdin|out|err                      #Same for 0|1|2
 
 PROCESS|CHILDPROCESS.send                       #Communication:
