no commit message

--- a/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/acorn.javascript_cli.txt
+++ b/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/acorn.javascript_cli.txt
@@ -39,7 +39,7 @@ ALTERNATIVES ==>                  #  - esprima:
                                   #  - cherow: not maintained
                                   #  - esprit: not maintained
 
-VERSION ==>                       #7.0.0 (acorn), 6.1.0 (acorn-loose), 6.2.0 (acorn-walker)
+VERSION ==>                       #7.1.0 (acorn), 6.1.0 (acorn-loose), 6.2.0 (acorn-walker)
                                   #Browser, Node.js or CLI
                                   #JavaScript parser and tokenizer
 
@@ -181,6 +181,7 @@ acorn [FILE]                      #CLI. Calls ACORN.parse() -> console.log()
 
 
 ACORN.Parser                      #PARSER. Same as ACORN, except with additional method extend()
+PARSER.acorn                      #ACORN
 PARSER.extend(PLUGIN...)          #
 
 ACORN-STAGE3                     ##PLUGIN bundling the following PLUGINs: bigint, class-fields, private-class-*,
