--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1528,8 +1528,9 @@ no-useless-concat                 #Avoid STR_LIT + STR2_LIT
 prefer-template                   #Avoid STR + STR2, prefer `...`
 no-template-curly-in-string       #Avoid ${} inside "" or ''
 
-unicorn/*                        ##Module "eslint-plugin-unicorn" (11.0.2)
+unicorn/*                        ##Module "eslint-plugin-unicorn" (12.0.1)
 unicorn/prefer-starts-ends-with  ##Must use STR.startsWith|endsWith() when possible
+unicorn/prefer-string-slice      ##Must use STR.slice() instead of STR.substr|substring()
 
 unicorn/no-hex-escape            ##Avoid \x... (prefer \u....)
 unicorn/number-literal-case      ##Consistent casing for 0x... 0o... 0b...
