no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -1229,44 +1229,43 @@ STR.localCompare(STR2[, LOCALEOPTS])->NUM      -#  - returns as -1|0|1
 new Intl.NumberFormat([LOCALEOPTS])         -|||#Number locale formatting.
                                             -|||#OPTS:
                                             -|||#  - style 'decimal|currency|percent' (def: 'decimal')
-                                          *-|||~#    or 'unit'
+                                        12*-|||~#    or 'unit'
                                             -|||#  - useGrouping BOOL (def: true): throusands separators
                                             -|||#  - minimum|maximumInteger|Fraction|SignificantDigits NUM
-                                          *-|||~#  - signDisplay 'auto' (def) (-1|-0|0|1), 'always' (-1|-0|+0|+1),
-                                          *-|||~#    'never' (1|0|0|1), 'except-zero' (-1|-0|0|+1)
-                                          *-|||~#  (for style 'decimal')
-                                          *-|||~#  - notation 'plain' (def) ('987654321'), 'compact' ('987.7 million'),
-                                          *-|||~#    'engineering' ('987.7E6'), 'scientific' ('9.877E8')
-                                          *-|||~#  (for style 'decimal', notation 'compact')
-                                          *-|||~#  - compactDisplay 'short' (def), 'long'
+                                        12*-|||~#  - signDisplay 'auto' (def) (-1|-0|0|1), 'always' (-1|-0|+0|+1),
+                                        12*-|||~#    'never' (1|0|0|1), 'exceptZero' (-1|-0|0|+1)
+                                        12*-|||~#  (for style 'decimal')
+                                        12*-|||~#  - notation 'standard' (def) ('987654321'), 'compact' ('988M'),
+                                        12*-|||~#    'engineering' ('987.654E6'), 'scientific' ('9.877E8')
+                                        12*-|||~#  (for style 'decimal', notation 'compact')
+                                        12*-|||~#  - compactDisplay 'short' (def) ('988M'), 'long' ('988 million')
                                             -|||#  (for style 'currency')
                                             -|||#  - currency STR (no def)
                                             -|||#  - currencyDisplay 'symbol|code|name' (def: 'symbol')
-                                          *-|||~#  - currencySign 'standard' (def) or 'accounting' (show negative as '(NUM)')
-                                          *-|||~#    or 'narrow-symbol'
-                                          *-|||~#  (for style 'unit')
-                                          *-|||~#  - unit STR among:
-                                          *-|||~#     - acceleration-g-force|meter-per-second-squared
-                                          *-|||~#     - angle-arc-minute|second|degree|radian|revolution
-                                          *-|||~#     - area-acre|hectare|square-centimeter|foot|inch|kilometer|meter|mile|yard
-                                          *-|||~#     - concentr-karat|milligram-per-deciliter|millimole-per-liter|part-per-million
-                                          *-|||~#     - consumption-liter-per-100kilometers|kilometer|mile-per-gallon[-imperial]
-                                          *-|||~#     - digital-[giga|kilo|mega|tera]bit|byte
-                                          *-|||~#     - duration-century|day[-person]|hour|[micro|nano]second|millisecond|minute|month[-person]|week[-person]|year[-person]
-                                          *-|||~#     - electric-ampere|milliampere|ohm|volt
-                                          *-|||~#     - energy-calorie|foodcalorie|joule|kilocalorie|kilojoule|kilowatt-hour
-                                          *-|||~#     - frequency-[kilo|mega|giga]hertz
-                                          *-|||~#     - length-astronomical-unit|centimeter|decimeter|fathom|foot|furlong|inch|kilometer|light-year|meter|micrometer|mile|
-                                          *-|||~#       mile-scandinavian|millimeter|nanometer|nautical-mile|parsec|picometer|yard
-                                          *-|||~#     - light-lux
-                                          *-|||~#     - mass-carat|[micro|milli|kilo]gram|[metric-]ton|ounce|ounce-troy|pound|stone
-                                          *-|||~#     - power-[milli|kilo|mega|giga]watt|horsepower
-                                          *-|||~#     - pressure-hectopascal|inch-hg|millibar|millimeter-of-mercury|pound-per-square-inch
-                                          *-|||~#     - speed-kilometer-per-hour|knot|meter-per-second|mile-per-hour
-                                          *-|||~#     - temperature-celsius|fahrenheit|generic|kelvin
-                                          *-|||~#     - volume-acre-foot|bushel|cubic-centimeter|cubic-foot|cubic-inch|cubic-kilometer|cubic-meter|cubic-mile|cubic-yard|cup[-metric]|fluid-ounce|
-                                          *-|||~#       gallon[-imperial]|[milli|centi|deci|hecto|mega]liter|pint[-metric]|quart|tablespoon|teaspoon
-                                          *-|||~#  - unitDisplay 'narrow', 'short' or 'long'
+                                        12*-|||~#  - currencySign 'standard' (def) or 'accounting' (show negative as '(NUM)')
+                                        12*-|||~#  (for style 'unit')
+                                        12*-|||~#  - unit STR among:
+                                        12*-|||~#     - acceleration-g-force|meter-per-second-squared
+                                        12*-|||~#     - angle-arc-minute|second|degree|radian|revolution
+                                        12*-|||~#     - area-acre|hectare|square-centimeter|foot|inch|kilometer|meter|mile|yard
+                                        12*-|||~#     - concentr-karat|milligram-per-deciliter|millimole-per-liter|part-per-million
+                                        12*-|||~#     - consumption-liter-per-100kilometers|kilometer|mile-per-gallon[-imperial]
+                                        12*-|||~#     - digital-[giga|kilo|mega|tera]bit|byte
+                                        12*-|||~#     - duration-century|day[-person]|hour|[micro|nano]second|millisecond|minute|month[-person]|week[-person]|year[-person]
+                                        12*-|||~#     - electric-ampere|milliampere|ohm|volt
+                                        12*-|||~#     - energy-calorie|foodcalorie|joule|kilocalorie|kilojoule|kilowatt-hour
+                                        12*-|||~#     - frequency-[kilo|mega|giga]hertz
+                                        12*-|||~#     - length-astronomical-unit|centimeter|decimeter|fathom|foot|furlong|inch|kilometer|light-year|meter|micrometer|mile|
+                                        12*-|||~#       mile-scandinavian|millimeter|nanometer|nautical-mile|parsec|picometer|yard
+                                        12*-|||~#     - light-lux
+                                        12*-|||~#     - mass-carat|[micro|milli|kilo]gram|[metric-]ton|ounce|ounce-troy|pound|stone
+                                        12*-|||~#     - power-[milli|kilo|mega|giga]watt|horsepower
+                                        12*-|||~#     - pressure-hectopascal|inch-hg|millibar|millimeter-of-mercury|pound-per-square-inch
+                                        12*-|||~#     - speed-kilometer-per-hour|knot|meter-per-second|mile-per-hour
+                                        12*-|||~#     - temperature-celsius|fahrenheit|generic|kelvin
+                                        12*-|||~#     - volume-acre-foot|bushel|cubic-centimeter|cubic-foot|cubic-inch|cubic-kilometer|cubic-meter|cubic-mile|cubic-yard|cup[-metric]|fluid-ounce|
+                                        12*-|||~#       gallon[-imperial]|[milli|centi|deci|hecto|mega]liter|pint[-metric]|quart|tablespoon|teaspoon
+                                        12*-|||~#  - unitDisplay 'narrow', 'short' or 'long'
                                             -|||#Relevant LOCALE_ARGS: nu
 NUMBERFORMAT.format(NUM|BIGINT)->STR        -|||#
 NUM|BIGINT.toLocaleString([LOCALEOPTS])->STR-|||#
