--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -15,7 +15,7 @@
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #12.10.0 (current), 10.16.3 (active LTS), 8.16.1 (active LTS)
+VERSION ==>                                     #12.11.0 (current), 10.16.3 (active LTS), 8.16.1 (active LTS)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -253,8 +253,8 @@ EventEmitter                                    #Base class of all objects recei
 EVENTEMITTER.on('EVENT', FUNC)->EVENTEMITTER    #
 EVENTEMITTER.once('EVENT', FUNC)->EVENTEMITTER  #
 EVENTEMITTER.prepend[Once]Listener(...)         #Like on[ce](...) but adds to beginning of listeners list, not end
-once(EVENTEMITTER, 'EVENT')->PROMISE_ARG_ARR 10*#Like EVENTEMITTER.once() but using PROMISE:
-                                             10*#  - resolved with ARG_ARR on emit('EVENT', ...ARGS)
+once(EVENTEMITTER|EVENTTARGET, 'EVENT')      10*#Like EVENTEMITTER.once() but using PROMISE:
+ ->PROMISE_ARG_ARR                           10*#  - resolved with ARG_ARR on emit('EVENT', ...ARGS)
                                              10*#  - rejected with VAL on emit('error', VAL) (unless 'EVENT' is 'error' itself)
 EVENTEMITTER.removeListener('EVENT', FUNC)
   ->EVENTEMITTER                                #
@@ -1183,6 +1183,7 @@ getCiphers()->STR_ARR                           #All suite of SSL ciphers are [P
                                                 #  - md5: RC4 (unless any PREFIX)
                                                 #  - ede-cbc-sha: #DES
                                                 #Can be changed with node --tls-cipher-list=LIST
+TLSSOCKET.getSharedSigalgs()->STR_ARR        12*#Returns SSL ciphers for signatures shared by client and server, ordered by preference
 TLSSOCKET.getEphemeralKeyInfo()->OBJ            #Gets information about cipher's (only [EC]DH) use of perfect forward secrecy:
                                                 #  - type '[EC]DH'
                                                 #  - name STR
@@ -1214,6 +1215,7 @@ TLS.createSecureContext(OBJ)->SECURECONTEXT     #OBJ:
                                                 #  - ciphers STR:
                                                 #     - defaults to "*AES*:HIGH:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!SRP:!CAMELLIA"
                                                 #     - AES are in order: 128 > 256, SHA384 > SHA256, ECDHE > DHE, RSA > ECDSA
+                                             12*#  - sigalgs 'STR:...': same for signature algorithms
                                                 #  - sessionIdContext STR:
                                                 #     - STR concatened in front of SSL session ID.
                                                 #     - if requestCert is true, it is a MD5 nonce. Otherwise, it is "".
@@ -2807,6 +2809,7 @@ public|privateEncrypt|Decrypt                   #Encrypts/decrypts asym. (RSA) T
  (STR|KEY|OBJ, TDBUFFER)                        #  - key, format, type, passphrase: like createPrivate|PublicKey()
                                                 #  - padding: CRYPTO.constants.RSA_NO|PKCS1[_OAEP]_PADDING
                                              12*#  - oaepHash STR (def: 'sha1'): algo for OAEP padding
+                                             12*#  - oaepLabel TDBUFFER: label for OAEP padding
 
 generateKeyPair[Sync]('TYPE', OPTS           10*#Create asym key pair, where SBUFFER is publicKey and SBUFFER privateKey
  [, FUNC(ERROR, SBUFFER, SBUFFER2)])         10*#'TYPE' is 'rsa', 'dsa', 'ec', 'ed25519', 'ed448', 'x25519', 'x448'
