no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -1944,6 +1944,7 @@ open(PATH, STR|NUM[, MODE], FUNC(ERROR, FD_INT))#Open a file and return a file d
                                                 #  - O_DSYNC: synchronous (wait for data+metadata)
                                                 #  - O_NOCTTY: if file is a terminal device, treat it as a normal file
                                                 #  - O_NONBLOCK: use async when opening special files like serial ports
+                                                #  - UV_FS_O_FILEMAP: use memory file mapping, i.e. bytewise copy of file in RAM. Only on Windows.
                                                 #On Windows, those flags are mapped to file attributes, file permissions and share permissions
                                                 #MODE INT is 0666 by def.
 close(FD_INT, FUNC(ERROR))                      #
