no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -3082,6 +3082,7 @@ ENCODING                                        #Either: ascii, utf8 (def), urf1
 
 UTIL.TextDecoder|TextEncoder                    #See DOM doc.
 TextDecoder|TextEncoder                      11*#
+                                             12*#Including TEXTENCODER.encodeInto()
 
 
                                              /=+===============================+=\
