no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -127,7 +127,7 @@ createHook(OPTS)->HOOK                          #Fires callbacks on new microtas
                                                 #     - since some RESOURCE create no microtasks, or several,
                                                 #       this might not be called, or be called several times
                                                 #  - destroy(TASK_ID): when RESOURCE is destroyed
-                                                #  - resolve(TASK_ID):
+                                                #  - promiseResolve(TASK_ID):
                                                 #     - when a PROMISE is resolved|rejected, including to another PROMISE2
                                                 #     - only for RESOURCE_TYPE PROMISE
                                                 #Exceptions thrown in callbacks are uncaught exceptions, but cannot be handled.
@@ -791,7 +791,7 @@ WRITESTREAM.getColorDepth([process.env])->NUM 9*#Number of bits per channel: 1|4
                                               9*#  - Linux:
                                               9*#     - ENVVAR TERM 'dumb': 1 bit
                                               9*#     - ENVVAR TMUX, ENVVAR TERM 'eterm|cons25|console|cygwin|dtterm|gnome|
-                                              9*#       hurd|jfbterm|konsole|kterm|mlterm|putty|st' or contains
+                                              9*#       hurd|jfbterm|konsole|kterm|mlterm|mosh|putty|st' or contains
                                               9*#       'ansi|color|linux|con|rxvt|screen|term|vt100', ENVVAR COLORTERM: 4 bits
                                               9*#     - ENVVAR TERM 'xterm-256*': 8 bits
                                               9*#     - ENVVAR TERM 'terminator|rxvt-unicode-24bit',
