no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -763,7 +763,8 @@ process.stdin|stdout|stderr                     #Standard streams
 STREAM.isTTY
 isatty(FD_INT)->BOOL                            #true|undefined if is READSTREAM|WRITESTREAM
 
-ReadStream                                      #ISTREAM of a text terminal. Often for process.stdin
+ReadStream                                      #ISTREAM of a text terminal.
+                                                #For process.stdin unless !isTTY
                                                 #Child of TCPSOCKET, but without destroy(), connect event nor *address*
                                                 #Will keep process alive until destroyed.
 READSTREAM.isRaw                                #If false (def):
@@ -781,7 +782,8 @@ READSTREAM.isRaw                                #If false (def):
 READSTREAM.setRawMode(BOOL)                     #
 READSTREAM.bytesRead                            #So far (including newlines)
 
-WriteStream                                     #Same as READSTREAM but for OSTREAM of a text terminal. Often for process.stdout|stderr
+WriteStream                                     #Same as READSTREAM but for OSTREAM of a text terminal
+                                                #For process.stdout|stderr unless !isTTY
 WRITESTREAM.columns|rows                        #UINT. Automatically updated.
 WRITESTREAM.on("resize", FUNC())                #
 
