no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -9,7 +9,7 @@ ALTERNATIVES ==>                  #  - eslint (prefered): more rules, more confi
                                   #  - jscs: not maintained, merged with eslint
                                   #  - jshint
 
-VERSION ==>                       #6.4.0
+VERSION ==>                       #6.5.0
                                   #JavaScript linter, using Espree parser.
 
 TYPE                              #ESTree type
@@ -1582,7 +1582,9 @@ radix [STR]                       #With parseInt(..., RADIX):
                                   #  - STR 'always' (def): require RADIX
                                   #  - STR 'as-needed': forbid RADIX if 10
 
-use-isnan                         #Must test NaN with [Number.]isNaN()
+use-isnan [OBJ]                   #Must test NaN with [Number.]isNaN()
+                                  #OBJ:
+                                  #  - enforceForSwitchCase BOOL (def: false): forbid case NaN and switch(NaN)
 no-compare-neg-zero               #Avoid VAL === -0 (prefer Object.is(VAL, -0))
 
 unicorn/
