--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -133,9 +133,9 @@ GENERAL ==>                                     #  - variable scope is:
                                                 #  - any function inherits scope of the function in which it is declared
                                                 #    (not fired)
                                                 #     - inherits by reference, not by value
-globalThis                                12*-|~#Global scope reference
-                                          12*-|~#Otherwise can be in many places (self in WORKER, window in DOM, global in Node.js, this otherwise)
-                                          12*-|~#Polyfill|ponyfill ljharb 'globalThis'
+globalThis                                 12*-|#Global scope reference
+                                           12*-|#Otherwise can be in many places (self in WORKER, window in DOM, global in Node.js, this otherwise)
+                                           12*-|#Polyfill|ponyfill ljharb 'globalThis'
 
 DECLARATION ==>                                 #  - using undeclared VAR throws ReferenceError (except with typeof)
                                                 #  - using VAR (even if declared in parent scope) declared later in
