--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -641,7 +641,7 @@ OBJECT MODE ==>                                 #SVAL is any VAL (except null):
                                                 #  - encoding is ignored
                                                 #  - both ISTREAM and OSTREAM must be in objectMode
                                                 #  - ISTREAM.read() NUM argument is ignored (always 1)
-                                                #  - highWatermMark is per-SVAL and defaults to 16
+                                                #  - highWaterMark is per-SVAL and defaults to 16
 
 ISTREAM ==>                                     #Input stream. Actually called Readable
                                                 #Is an ASYNC_ITERABLE
