--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -1082,7 +1082,10 @@ STR.replace(REGEXP|STR2, STR3)                  #Returns STR, replacing REGEXP w
                                                 #  - $': what's after full match
                                                 #  - $$: $ literal
 STR.replace(REGEXP|STR2,
-FUNC($&, $1..., INDEX, STR))                    #Returs STR, replacing REGEXP with FUNC(...)
+ FUNC($&, $1..., INDEX, STR))                   #Returns STR, replacing REGEXP with FUNC(...)
+STR.replaceAll(REGEXP|STR2, STR3)
+STR.replaceAll(REGEXP|STR2,                 *-|~#Same as STR.replace(...) but STR2 implies a 'g' flag.
+ FUNC($&, $1..., INDEX, STR))               *-|~#If REGEXP, must have a 'g' flag.
 STR.split(REGEXP|STR2[, UINT])                  #Returns an ARR, with REGEXP|STR2 being split delimiter.
                                                 #If STR2 is '', means between each characters.
                                                 #If REGEXP contains parenthesis groups, each is included in ARR between
