no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -1229,6 +1229,20 @@ STR.localCompare(STR2[, LOCALEOPTS])->NUM      -#  - returns as -1|0|1
                                                -#  - real sorting, not just codepoint-wise
                                                -#  - takes locales into account
 
+new Intl.DisplayNames([LOCALEOPTS])             #Language string translation
+                                                #OPTS:
+                                                #  - type STR among:
+                                                #     - 'region': countries (ISO-3166, e.g. 'US' to 'United States') or world regions (UN M49 code, e.g. '419' to 'Latin America')
+                                                #     - 'language' (e.g. 'fr' or 'fr-CA' to 'French' or 'Canadian French')
+                                                #     - 'script' (ISO-15924, e.g. 'Latn' or 'Arab' to 'Latin' or 'Arabic')
+                                                #     - 'currency' (ISO-4217, e.g. 'USD' to 'US Dollar')
+                                                #     - 'dateTimeField': 'year|quarter|month|weekOfYear|weekday|day|dayPeriod|hour|minute|second|timeZoneName'
+                                                #     - 'quarter': '1'-'4' -> '3rd quarter'
+                                                #     - 'month': '1'-'13' -> 'April'
+                                                #     - 'weekday': '1'-'7' -> 'Monday'
+                                                #     - 'dayPeriod': 'am|pm' -> 'PM'
+DISPLAYNAMES.of(STR)->STR2                      #
+
 new Intl.NumberFormat([LOCALEOPTS])         -|||#Number locale formatting.
                                             -|||#OPTS:
                                             -|||#  - style 'decimal|currency|percent' (def: 'decimal')
